# kirogi

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  Messages.sh  README.md  TODO.md
cmake/: FindMAVLink.cmake  FindQtZeroConf.cmake
data/: CMakeLists.txt  org.kde.kirogi.appdata.xml  org.kde.kirogi.desktop
data/icons/: CMakeLists.txt
docker/: .dockerignore  Dockerfile  README.md  supervisord.conf
po/ar/: kirogi.po  kirogiparrotplugin.po
po/ca/: kirogi.po  kirogiparrotplugin.po
po/ca@valencia/: kirogi.po  kirogiparrotplugin.po
po/cs/: kirogi.po  kirogiparrotplugin.po
po/de/: kirogi.po  kirogiparrotplugin.po
po/en_GB/: kirogi.po  kirogiparrotplugin.po
po/eo/: kirogi.po  kirogiparrotplugin.po
po/es/: kirogi.po  kirogiparrotplugin.po
po/et/: kirogi.po  kirogiparrotplugin.po
po/fi/: kirogi.po  kirogiparrotplugin.po
po/fr/: kirogi.po  kirogiparrotplugin.po
po/ga/: kirogi.po  kirogiparrotplugin.po
po/gl/: kirogi.po  kirogiparrotplugin.po
po/he/: kirogi.po  kirogiparrotplugin.po
po/it/: kirogi.po  kirogiparrotplugin.po
po/ja/: kirogi.po  kirogiparrotplugin.po
po/ka/: kirogi.po  kirogiparrotplugin.po
po/ko/: kirogi.po  kirogiparrotplugin.po
po/lt/: kirogi.po  kirogiparrotplugin.po
po/nl/: kirogi.po  kirogiparrotplugin.po
po/pl/: kirogi.po  kirogiparrotplugin.po
po/pt/: kirogi.po  kirogiparrotplugin.po
po/pt_BR/: kirogi.po  kirogiparrotplugin.po
po/sk/: kirogi.po  kirogiparrotplugin.po
po/sl/: kirogi.po  kirogiparrotplugin.po
po/sv/: kirogi.po  kirogiparrotplugin.po
po/tr/: kirogi.po  kirogiparrotplugin.po
po/uk/: kirogi.po  kirogiparrotplugin.po
po/zh_CN/: kirogi.po  kirogiparrotplugin.po
po/zh_TW/: kirogi.po  kirogiparrotplugin.po
src/: CMakeLists.txt  autosettingshandler.cpp  autosettingshandler.h  kirogi.kcfg  main.cpp  permissions.cpp  permissions.h  resources.qrc  settings.kcfgc
src/gstreamer/: CMakeLists.txt  GstVideo.qml  gstreamer.qrc  gstreamer_android-1.0.c  gstreamer_android.h  gstreamerintegration.cpp  gstreamerintegration.h  qt_gstreamer_android-1.0.cpp  videosurface.cpp  videosurface.h
src/lib/: CMakeLists.txt  KirogiCoreConfig.cmake.in  abstractconnection.cpp  abstractconnection.h  abstractpluginmodel.cpp  abstractpluginmodel.h  abstractvehicle.cpp  abstractvehicle.h  connectionconfiguration.cpp  connectionconfiguration.h  joystickconfiguration.cpp  joystickconfiguration.h  kirogi.categories  kirogivehiclesupportplugin.desktop  qmldir  qtquickplugin.cpp  qtquickplugin.h  udpconfiguration.cpp  udpconfiguration.h  vehiclesupportplugin.cpp  vehiclesupportplugin.h  vehiclesupportpluginmodel.cpp  vehiclesupportpluginmodel.h
src/lib/positionsource/: CMakeLists.txt  positionsource.cpp  positionsource.h
src/lib/settings/: CMakeLists.txt  autosettingshandler.cpp  autosettingshandler.h  kirogi.kcfg  settings.kcfgc
src/lib/vehicleparameters/: CMakeLists.txt  parametermodel.cpp  parametermodel.h
src/plugins/: CMakeLists.txt
src/plugins/mavlink/: CMakeLists.txt  Messages.sh  kirogimavlinkplugin.categories  kirogimavlinkplugin.json  mavlinkconnection.cpp  mavlinkconnection.h  mavlinkplugin.cpp  mavlinkplugin.h  mavlinkpluginconfig.cpp  mavlinkpluginconfig.h  mavlinkudpconnection.cpp  mavlinkudpconnection.h  mavlinkvehicle.cpp  mavlinkvehicle.h
src/plugins/parrot/: CMakeLists.txt  Messages.sh  bebop.sdp  kirogiparrotplugin.categories  kirogiparrotplugin.json  parrotconnection.cpp  parrotconnection.h  parrotplugin.cpp  parrotplugin.h  parrotprotocol.cpp  parrotprotocol.h  parrotvehicle.cpp  parrotvehicle.h
src/plugins/ryzetello/: CMakeLists.txt  Messages.sh  kirogiryzetelloplugin.categories  kirogiryzetelloplugin.json  ryzetelloconnection.cpp  ryzetelloconnection.h  ryzetelloplugin.cpp  ryzetelloplugin.h  ryzetellovehicle.cpp  ryzetellovehicle.h
src/ui/: FlightControls.qml  Gamepad.qml  NavigationMap.qml  Settings.qml  Vehicle.qml  VehicleActionsDrawer.qml  main.qml
src/ui/components/: ModeRocker.qml  PillBox.qml  PillBoxSeparator.qml  PitchBar.qml  TouchButton.qml  TouchDPad.qml  VideoElement.qml  VirtualHorizon.qml  YawBar.qml
src/ui/helpers/: BlurredBackground.qml
